# aoc2025

./: README.md  TODO.md  pyproject.toml
day1/: puzzle1.py  puzzle11.txt
day10/: puzzle101.py  puzzle102.py
day11/: puzzle111.py  puzzle112.py  puzzle112.txt  puzzle113.py
day12/: puzzle121.py  puzzle121.txt  puzzle121_backtrack.py  puzzle121_dlx.py  puzzle121_exactcover.py
day12/strategies/: __init__.py  area_check.py  backtrack.py  base.py  dlx.py  hybrid.py  z3_sat.py
day2/: puzzle21.py  puzzle21.txt  puzzle22.py  puzzle22.txt
day3/: puzzle31.py  puzzle32.py
day4/: puzzle41.py  puzzle41.txt  puzzle42.py  puzzle42.txt
day4/experiments/: collapse_picking.py  picking_optimization.py
day5/: compare_datasets.py  puzzle51.py  puzzle52.py
day5/strategies/: __init__.py  base.py  broadcast.py  intervalindex.py  intervaltree.py  pandasnative.py  sweepline.py
day6/: puzzle61.py  puzzle62.py
day7/: benchmark.py  puzzle71.py  puzzle72.py
day7/strategies/: __init__.py  base.py  convolution.py  matrix_propagation.py  pytorch_neural.py
day8/: benchmark.py  puzzle81.py  puzzle81.txt  puzzle82.py  puzzle82s.py  puzzle83.py
day8/strategies/: __init__.py  base.py  hierarchical.py  kdtree.py  pytorch_gpu.py  sparse_graph.py  union_find.py
day9/: puzzle91.py  puzzle92.py  puzzle92.txt  puzzle92s.py
day9/strategies/: __init__.py  base.py  convex_hull.py  rasterize.py  scanline.py  shapely_contains.py
puzzle3/: puzzle31.py  puzzle32.txt
