[project]
name = "aoc2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dlx>=1.0.4",
    "intervaltree>=3.1.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "polyomino>=0.7.1",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "torch>=2.9.1",
    "z3-solver>=4.15.4.0",
]
